Fix mob horizontal scroll

--- a/develop/css/responcive.scss
+++ b/develop/css/responcive.scss
@@ -734,6 +734,13 @@
     .section6__headline {
         margin-bottom: 3.5rem;
     }
+    body,
+    html {
+        overflow-x: inherit !important;
+    }
+    * {
+        overflow-x: hidden;
+    }
 }
 @media (max-width: 420px) {
     .open__item-text,
